cluster/infrastructure/victoria-metrics/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: metrics
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
  hostnames:
    - "grafana.maio-tech.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: auth
      backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: metrics
spec:
  chain:
    middlewares:
      - name: basic-auth
        namespace: ingress
